[package]
name = "gis-ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gis-ingest"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
bytes = "1"
url = "2"
